--- a/FSClient.csproj
+++ b/FSClient.csproj
@@ -68,6 +68,10 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Controls.Input.Toolkit, Version=3.5.40128.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\WPF Toolkit\v3.5.50211.1\System.Windows.Controls.Input.Toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml">
@@ -91,6 +95,7 @@
     <Compile Include="Account.cs" />
     <Compile Include="Broker.cs" />
     <Compile Include="Call.cs" />
+    <Compile Include="Controls\OurAutoCompleteBox.cs" />
     <Compile Include="Controls\PhonePadButton.xaml.cs">
       <DependentUpon>PhonePadButton.xaml</DependentUpon>
     </Compile>
