I cannot spell the word balloons.

--- a/app.config
+++ b/app.config
@@ -25,7 +25,7 @@
             <setting name="FrontOnIncoming" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="IncomingBallons" serializeAs="String">
+            <setting name="IncomingBalloons" serializeAs="String">
                 <value>True</value>
             </setting>
             <setting name="HeadsetDevice" serializeAs="String">
