--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -26,7 +26,7 @@
     <Setting Name="FrontOnIncoming" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="IncomingBallons" Type="System.Boolean" Scope="User">
+    <Setting Name="IncomingBalloons" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="HeadsetDevice" Type="System.String" Scope="User">
