--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -38,5 +38,8 @@
     <Setting Name="UseNumberOnlyInput" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="SettingsUpgrade" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
