--- a/app.config
+++ b/app.config
@@ -37,6 +37,9 @@
             <setting name="UseNumberOnlyInput" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SettingsUpgrade" serializeAs="String">
+                <value>True</value>
+            </setting>
         </FSClient.Properties.Settings>
     </userSettings>
 </configuration>
