Added EventSocket config generation so you can control the event socket port from within FSClient.  Generalized some standard config generation items. Ensure the freeswitch.xml file exists or else core will crash. Warn is trying to reload portaudio settings during a call.

--- a/FSClient.csproj
+++ b/FSClient.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <Compile Include="Converters.cs" />
     <Compile Include="DelayedFunction.cs" />
+    <Compile Include="EventSocket.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="FSEvent.cs" />
     <Compile Include="GenericEditor.xaml.cs">
