Redid options.xaml so layout grows better. Added record call option. Fixed slight bug in plugin manager base.

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="ContactPlugins" Type="FSClient.SettingsPluginDataCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="RecordingPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)">recordings</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
