--- a/app.config
+++ b/app.config
@@ -40,6 +40,9 @@
             <setting name="SettingsUpgrade" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="RecordingPath" serializeAs="String">
+                <value>recordings</value>
+            </setting>
         </FSClient.Properties.Settings>
     </userSettings>
 </configuration>
