--- a/FSClient.csproj
+++ b/FSClient.csproj
@@ -61,7 +61,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FreeSWITCH.Managed">
-      <HintPath>External Items\FreeSWITCH.Managed.dll</HintPath>
+      <HintPath>External Items\$(Configuration)\FreeSWITCH.Managed.dll</HintPath>
     </Reference>
     <Reference Include="PresentationFramework.Aero" />
     <Reference Include="System" />
