--- a/FSClient.csproj
+++ b/FSClient.csproj
@@ -266,7 +266,7 @@ if not exist ".\conf" md conf
 copy ..\..\"external items"\conf\freeswitch.xml .\conf</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>if exist "%25FREESWITCH_SRC_LOCATION%25" copy  "%25FREESWITCH_SRC_LOCATION%25"\Win32\$(ConfigurationName)\mod\FreeSWITCH.Managed.dll ..\..\"external items"</PreBuildEvent>
+    <PreBuildEvent>if exist "%25FREESWITCH_SRC_LOCATION%25" copy  "%25FREESWITCH_SRC_LOCATION%25"\Win32\$(ConfigurationName)\mod\FreeSWITCH.Managed.dll ..\..\"external items\release\"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
