--- a/app.config
+++ b/app.config
@@ -43,6 +43,12 @@
             <setting name="RecordingPath" serializeAs="String">
                 <value>recordings</value>
             </setting>
+            <setting name="CheckForUpdates" serializeAs="String">
+                <value>OnStart</value>
+            </setting>
+            <setting name="UpdateURL" serializeAs="String">
+                <value>https://fsclient.fluky.biz/version</value>
+            </setting>
         </FSClient.Properties.Settings>
     </userSettings>
 </configuration>
