--- a/app.config
+++ b/app.config
@@ -49,6 +49,12 @@
             <setting name="UpdateURL" serializeAs="String">
                 <value>https://fsclient.fluky.biz/version</value>
             </setting>
+            <setting name="UPNPNAT" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="DirectSipDial" serializeAs="String">
+                <value>False</value>
+            </setting>
         </FSClient.Properties.Settings>
     </userSettings>
 </configuration>
