Refined the layout, added option to hide the accounts/calls tabs and show status information on dialpad tab.

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -65,5 +65,8 @@
     <Setting Name="DirectSipDial" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="GuiStartup" Type="System.String" Scope="User">
+      <Value Profile="(Default)">All</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
