--- a/app.config
+++ b/app.config
@@ -55,6 +55,9 @@
             <setting name="DirectSipDial" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="GuiStartup" serializeAs="String">
+                <value>All</value>
+            </setting>
         </FSClient.Properties.Settings>
     </userSettings>
 </configuration>
