--- a/app.config
+++ b/app.config
@@ -58,6 +58,9 @@
             <setting name="GuiStartup" serializeAs="String">
                 <value>All</value>
             </setting>
+            <setting name="Theme" serializeAs="String">
+                <value>Steel</value>
+            </setting>
         </FSClient.Properties.Settings>
     </userSettings>
 </configuration>
