Accessibility changes, keyboard shortcuts, UIA, key handling cleanup, account enabled on account options page

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -71,5 +71,8 @@
     <Setting Name="Theme" Type="System.String" Scope="User">
       <Value Profile="(Default)">Steel</Value>
     </Setting>
+    <Setting Name="KeyboardFocusIncomingCall" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
