--- a/app.config
+++ b/app.config
@@ -61,6 +61,9 @@
             <setting name="Theme" serializeAs="String">
                 <value>Steel</value>
             </setting>
+            <setting name="KeyboardFocusIncomingCall" serializeAs="String">
+                <value>False</value>
+            </setting>
         </FSClient.Properties.Settings>
     </userSettings>
 </configuration>
