--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -74,5 +74,8 @@
     <Setting Name="KeyboardFocusIncomingCall" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Conference" Type="FSClient.SettingsConference" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
