--- a/app.config
+++ b/app.config
@@ -1,69 +1,80 @@
 <?xml version="1.0"?>
 <configuration>
-<configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-        <section name="FSClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
-    </sectionGroup>
-</configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup><userSettings>
-        <FSClient.Properties.Settings>
-            <setting name="HeadsetInDev" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="HeadsetOutDev" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="SpeakerInDev" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="SpeakerOutDev" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="RingDev" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="FrontOnIncoming" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="IncomingBalloons" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="HeadsetDevice" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="ClearDTMFS" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="UseNumberOnlyInput" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SettingsUpgrade" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="RecordingPath" serializeAs="String">
-                <value>recordings</value>
-            </setting>
-            <setting name="CheckForUpdates" serializeAs="String">
-                <value>OnStart</value>
-            </setting>
-            <setting name="UpdateURL" serializeAs="String">
-                <value>https://fsclient.fluky.biz/version</value>
-            </setting>
-            <setting name="UPNPNAT" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="DirectSipDial" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="GuiStartup" serializeAs="String">
-                <value>All</value>
-            </setting>
-            <setting name="Theme" serializeAs="String">
-                <value>Steel</value>
-            </setting>
-            <setting name="KeyboardFocusIncomingCall" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </FSClient.Properties.Settings>
-    </userSettings>
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="FSClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+		</sectionGroup>
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+	</startup>
+	<userSettings>
+		<FSClient.Properties.Settings>
+   <setting name="HeadsetInDev" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="HeadsetOutDev" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="SpeakerInDev" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="SpeakerOutDev" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="RingDev" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="FrontOnIncoming" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="IncomingBalloons" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="HeadsetDevice" serializeAs="String">
+    <value />
+   </setting>
+   <setting name="ClearDTMFS" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="UseNumberOnlyInput" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="SettingsUpgrade" serializeAs="String">
+    <value>True</value>
+   </setting>
+   <setting name="RecordingPath" serializeAs="String">
+    <value>recordings</value>
+   </setting>
+   <setting name="CheckForUpdates" serializeAs="String">
+    <value>OnStart</value>
+   </setting>
+   <setting name="UpdateURL" serializeAs="String">
+    <value>https://fsclient.fluky.biz/version</value>
+   </setting>
+   <setting name="UPNPNAT" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="DirectSipDial" serializeAs="String">
+    <value>False</value>
+   </setting>
+   <setting name="GuiStartup" serializeAs="String">
+    <value>All</value>
+   </setting>
+   <setting name="Theme" serializeAs="String">
+    <value>Steel</value>
+   </setting>
+   <setting name="KeyboardFocusIncomingCall" serializeAs="String">
+    <value>False</value>
+   </setting>
+  </FSClient.Properties.Settings>
+	</userSettings>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0"/>
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
