--- a/JabraHeadset/JabraHeadsetPlugin.csproj
+++ b/JabraHeadset/JabraHeadsetPlugin.csproj
@@ -43,6 +43,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JabraDeviceAPI">
+      <HintPath>..\External Items\JabraDeviceAPI.dll</HintPath>
+    </Reference>
     <Reference Include="JabraTelephonyAPI, Version=1.2.0.0, Culture=neutral, PublicKeyToken=8f966dc7fd80e1d9, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External Items\JabraTelephonyAPI.dll</HintPath>
